# metrica-backend

./: README.md  main.py  package-lock.json  pyproject.toml
migrations/: env.py
migrations/versions/: 06eed1450efa_init.py  0c8c9d4d6d21_merge_groups_and_stars_heads.py  9d6b3c4a7f12_add_star_transactions.py  b1d2e3f4a5b6_add_auth_identities_and_phone_auth.py  c3f1d2e4a9b7_add_telegram_auth_sessions.py  d0e465947d8d_add_groups_relantioship.py  e4f5a6b7c8d9_add_parent_access_requests.py  f6a7b8c9d0e1_add_parent_chat_messages.py
scripts/: seed_test_data.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: auth.py  parent.py  student.py  tutor.py
src/core/repositories/: auth_identity.py  base.py  file.py  group.py  lesson.py  lesson_file.py  parent_access.py  parent_chat_message.py  phone_auth_code.py  star_transaction.py  telegram_auth_session.py  tutor_student.py  user.py
src/core/service/: auth.py  author.py  parent.py  student.py  tutor.py
src/database/: db_manager.py  models.py
src/schemas/: group.py  parent.py  student.py  tutor.py  user.py
uploads/: 3_metrika_v2.pptx
